# minimum-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_knowledge_point.yml  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  project_dissect_request.yml
.github/workflows/: ci.yml
docs/: GOOD_FIRST_ISSUES.md
docs/ai-mastery/: README.md  ai-assisted-architecture.md  ai-code-review.md  ai-driven-development.md  prompt-engineering.md
docs/cognitive/: README.md  ai-era-thinking.md  why-learn-programming.md  why-py-and-ts.md
docs/practice/: README.md  architecture-design.md  deployment.md  implementation.md  project-planning.md
labs/agent-tool-calling/: README.md  solution.py  starter.py  test_agent.py
labs/config-loader/: README.md  solution.py  starter.py  test_config_loader.py
labs/docker-ci/: Dockerfile  README.md  test_docker_ci.py
labs/fastapi-service/: README.md  solution.py  starter.py  test_fastapi_service.py
labs/llm-client/: README.md  solution.py  starter.py  test_llm_client.py
labs/rag-mini-pipeline/: README.md  solution.py  starter.py  test_rag_pipeline.py
src/patterns/: README.md  builder.md  dependency_injection.md  factory.md  middleware.md  observer.md  pipeline.md  repository.md  strategy.md
src/typescript/: __init__.ts
tests/python/: test_async_io.py  test_classes.py  (+4 more)
web/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+140 files in other folders)
